--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       data-shape="rectangular"
       data-logo_alignment="left"
     ></div>
+    <button id="signout">sign out</button>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
       function handleCredentialResponse(response) {
@@ -31,8 +32,19 @@
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(body),
         })
-          .then((response) => console.log(response))
+          .then((response) => response.json())
+          .then(({ user }) => localStorage.setItem("email", user.email))
           .catch((e) => console.log(e));
+
+        const signout = document.getElementById("signout");
+        signout.onclick = () => {
+          console.log(google.accounts.id)
+          google.accounts.id.disableAutoSelect();
+          google.accounts.id.revoke(localStorage.getItem("email"), (done) => {
+            localStorage.clear();
+            location.reload();
+          });
+        };
       }
     </script>
   </body>
